--- a/style/personaldossier.css
+++ b/style/personaldossier.css
@@ -364,12 +364,12 @@ cursor: default !important;
 
 #titleContainer{
 	background-color:#ebedee;
-	height:23px;
+	height:16px;
 	border-bottom:1px solid white;
-	padding-left:10px;
 	margin-top:1px;
 	top:25px;
 	font-size:14px;
+	padding:3px 10px 4px 10px;
 }
 
 .dossierItemText{
@@ -393,11 +393,7 @@ body.embedBadge {
 	overflow-y:scroll;
 	/*height: 270px; */ /* 380 - 87px*/
 }
-#pd_footer{
-	background-image:url(../images/logo_isn.gif);
-	background-repeat:none;
-	border:1px solid red;
-}
+
 
 /*****END OF EMBED VIEW********/
 
